--- a/src/main/resources/templates/sujan/common_heFu/common.html
+++ b/src/main/resources/templates/sujan/common_heFu/common.html
@@ -22,7 +22,7 @@ body {
   padding: 12px;
   text-decoration: none;
   font-size: 18px; 
-  line-height: 25px;
+  line-height: 15px;
   border-radius: 4px;
 }
 
@@ -65,7 +65,7 @@ body {
   
    <div class="header">
   
-  <a class="logo" href="#"><img style="width: 60px; height:50px;" th:src="@{../img/logo.jpg}" alt=""/></a>
+  <a class="logo" href="#"><img style="width: 60px; height:50px;" th:src="@{../../img/sujan/logo1.jpg}" alt=""/></a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
