--- a/src/main/resources/templates/sujan/welcome_page.html
+++ b/src/main/resources/templates/sujan/welcome_page.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>welcome</title>
-<link rel="stylesheet" th:href="@{/css/welcome_page.css}" />
+<link rel="stylesheet" th:href="@{/css/sujan/welcome_page.css}" />
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
@@ -36,7 +36,7 @@
 	</section>
 	<section class="aboutus">
 		<h1>Hurry Up</h1>
-		<div><a href="#" th:href="@{/form1}" class="register-btn">Register Here! </a></div>
+		<div><a href="#" th:href="@{sujan/form1}" class="register-btn">Register Here! </a></div>
 	</section>
 </body>
 </html>
