add something file

--- a/src/main/resources/templates/Client Support.html
+++ b/src/main/resources/templates/Client Support.html
@@ -136,7 +136,7 @@ Client Service Center Of SSB_Card</h1>
 <script>
 $(document).ready(()=>{
     $(".item").removeClass("item");
-    $("#home-link").addClass("item");
+    $("#clientsupport-link").addClass("item");
 });
 </script>
 </div>
