--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,44 +3,44 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title th:text="${title}">Bootstrap demo</title>
     <link rel="stylesheet" th:href="@{/css/style.css}" />
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>    
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-primary">
+  
+  <!-- Start nav bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
 
-  <div class="container-fluid">
+  <div class="container-fluid ">
  
-    <a class="navbar-brand logo" href="#"><img style="width: 60px; height:50px;" th:src="@{/img/logo.jpg}" alt=""/></a>
+    <a class="navbar-brand logo"><img style="width: 60px; height:50px;" th:src="@{/img/logo.jpg}" alt=""/></a>
     
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+    <button onclick="toggleNavbar()" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     
-    <div class="collapse navbar-collapse" id="navbarScroll">
+    <div class="collapse navbar-collapse " id="navbarScroll">
       
-      <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+      <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll " style="--bs-scroll-height: 100px;">
+        
+        <li class="item ">
+          <a class="nav-link active" id="home-link" aria-current="page" th:href="@{/}">Home</a>
+        </li>
+        <li class="item">
+          <a class="nav-link active" id="abouts-link"  th:href="@{/abouts}">Abouts</a>
+        </li>
+        <li class="item">
+          <a class="nav-link active" id="services-link" th:href="@{/services}">Services</a>
+        </li>
+       
         
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Link
+         <a class="nav-link active">
+          <span id="timeSet"> </span>
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Link</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
@@ -50,12 +50,55 @@
     </div>
   </div>
 </nav>
+<!-- nav bar end -->
 
+<!-- body replace of every page -->
 <div th:replace="${content}"></div>
+
+<!-- footer start -->
+<footer class="bg-light text-center text-white footer">
+  <!-- Grid container -->
+  <div class="container p-0 pb-0">
+    <!-- Section: Social media -->
+    <section class="mb-6">
+      <!-- Facebook -->
+   <a id="boot-icon1" href="www.facebook.com"><i class="bi bi-facebook" style="font-size: 2rem; color: rgb(0, 0, 255);"></i
+      ></a>
+
+      <!-- Twitter -->
+   <a id="boot-icon2" href="www.twitter.com"><i class="bi bi-twitter" style="font-size: 2rem; color: rgb(0, 0, 255);"></i
+      ></a>
+
+      <!-- Google -->
+   <a id="boot-icon3" href="www.google.com"><i class="bi bi-google" style="font-size: 2rem; color: rgb(0, 0, 255);"></i
+      ></a>
+
+      <!-- Instagram -->
+   <a id="boot-icon4" href="www.instagram.com"><i class="bi bi-instagram" style="font-size: 2rem; color: rgb(0, 0, 255);"></i
+      ></a>
+
+      <!-- Linkedin -->
+   <a id="boot-icon5" href="www.linkedin.com"><i class="bi bi-linkedin" style="font-size: 2rem; color: rgb(0, 0, 255);"></i
+      ></a>
+      <!-- Github -->
+   <a id="boot-icon6" href="www.github.com" ><i class="bi bi-github" style="font-size: 2rem; color: rgb(0, 0, 255);"></i
+      ></a>
+    </section>
+    <!-- Section: Social media -->
+  </div>
+  <!-- Grid container -->
+  <div class="text-center p-3 bg-primary">
+    © 2022 Copyright:
+    <a class="text-white">SSB_FINAL_PROJECT.com</a>
+  </div>
+  
+</footer>
+<!-- footer end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
     <script th:src="@{/js/script.js}"></script>
+    <script th:src="@{/js/timeScript.js}"></script>
   </body>
 </html>
