--- a/src/main/resources/static/css/sujan/welcome_page.css
+++ b/src/main/resources/static/css/sujan/welcome_page.css
@@ -3,7 +3,7 @@
     margin:0;
     padding:0;
 }
-.header{
+.header1{
     width: 100%;
     min-height: 100vh;
     background-image: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ),url("../../img/sujan/card01.jpg");
