--- a/src/main/resources/templates/sujan/welcome_page.html
+++ b/src/main/resources/templates/sujan/welcome_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="sujan/common::layout(~{::section})">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>welcome</title>
@@ -7,7 +7,7 @@
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-	<section class="header">
+	<section class="header1">
 		<nav>
 			<div class="textbox">
 				<h1>Welcome to Our PAY </h1><hr>
