--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,7 +88,7 @@
   </div>
   <!-- Grid container -->
   <div class="text-center p-3 bg-primary">
-    © 2022 Copyright:
+    © <span><script>document.write(new Date().getFullYear());</script></span> Copyright:
     <a class="text-white">SSB_FINAL_PROJECT.com</a>
   </div>
   
