User and card page added

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,7 +24,7 @@ Client Service Center Of SSB_Card</h1>
 <div class="box">
 <h4>まだ登録されていない会員の方</h4>
 
-<a class="customerservicesbtn1" th:href="@{/}">SSB_WEB_DISK 新規登録</a>
+<a class="customerservicesbtn1" th:href="@{/chooseUser}">SSB_WEB_DISK 新規登録</a>
 
 <h4 class="mt-2">LIFE-Web Deskご登録方法・ご注意 ></h4>
 </div>
