--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -121,5 +121,40 @@
 	border-radius:50%;
 	
 }
+.chooseUser{
+	border:0px solid gray;
+    margin:15px;
+    background-color:#f2f2f2;
+    display:flex;
+    border-radius:10px;
+}
+.chooseUser .chooseUserBox{
+    border: 2px solid brown;
+    padding: 24px;
+    margin: 2px 20px;
+    border-radius: 28px;
+    background: #f2f2f2;
+    margin-bottom: 5px;
+    margin-top:5px;
+    width:650px;
+}
+.chooseUser .chooseUserBox:hover{
+    border: 2px solid brown;
+    padding: 24px;
+    margin: 2px 20px;
+    border-radius: 28px;
+    background: yellow;
+    margin-bottom: 5px;
+    margin-top:5px;
+    width:650px;
+}
+.chooseUser .chooseUserBox .userlink:hover{
+    border: 2px solid brown;
+    border-radius: 28px;
+    background: red;
+  
+
+  
+}
 
 
