--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,13 +35,10 @@
         <li class="item">
           <a class="nav-link active" id="services-link" th:href="@{/services}">Services</a>
         </li>
-       
-        
-        <li class="nav-item">
-         <a class="nav-link active">
-          <span id="timeSet"> </span>
-          </a>
+        <li class="item">
+          <a class="nav-link active" id="chooseUser-link" th:href="@{/chooseUser}">Creat a/c</a>
         </li>
+ 
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -51,6 +48,11 @@
   </div>
 </nav>
 <!-- nav bar end -->
+
+<div style="text-align:right; margin-right:20px;">
+<span id="timeSetByBody"></span><br>
+<span id="dateSetByBody"></span>
+</div>
 
 <!-- body replace of every page -->
 <div th:replace="${content}"></div>
