--- a/src/main/resources/templates/login/login_page2.html
+++ b/src/main/resources/templates/login/login_page2.html
@@ -12,27 +12,66 @@ th:replace="index::layout(~{::section})">
 <div class="col-md-6 offset-md-3">
 <div class="my-card mt-3">
 
-<h3 class="font-weight-bold">LOGIN FORM OF SSB CARD</h3>
-<h4>基本情報登録画面</h4><br>
+<h3 class="font-weight-bold" style="text-align:center">LOGIN FORM OF SSB CARD</h3>
+<h4 style="text-align:center">基本情報登録画面 2</h4><br>
 
-<form>
+<form th:action="@{/bishnu/login_page3}" th:object="${loginForm2}" method="post">
 
 <div class="mb-3">
-   <label for="name_field">Your Name:</label>
-   <input type="text" class="form-control" id="name_field" placeholder="Enter your name..." required>
+   <label for="email_field">Your Email:</label>
+   <input type="email" class="form-control" name="email" id="email_field" placeholder="sample@ssbcard.co.jp..." required>
+</div>
 
+<div class="mb-3">
+                <label for="mobile" > Mobile Number：</label>
+                <p> <span>ex:090-1234-5678</span></p>
+                <div class="row">
+                    <div class="col-3">
+                        <input type="number" class="form-control" name="mobile1"
+                            size="3" maxlength="3" />
+                    </div>-
+                    <div class="col-3">
+                        <input type="number" class="form-control"  name="mobile2"
+                            size="4" maxlength="4"  />
+                    </div>-
+                    <div class="col-3">
+                        <input type="number" class="form-control" name="mobile3"
+                            size="4" maxlength="4"  />
+                    </div>
+</div>
+</div>
+
+<div class="mb-3">
+                <label for="tel" > TEL Number： </label>
+              <p> <span>ex:03-1234-5678</span></p>
+               
+                <div class="row">
+                    <div class="col-3">
+                        <input type="number" class="form-control" name="tel1"
+                            size="2" maxlength="2" />
+                    </div>-
+                    <div class="col-3">
+                        <input type="number" class="form-control" name="tel2"
+                            size="4" maxlength="4"  />
+                    </div>-
+                    <div class="col-3">
+                        <input type="number" class="form-control" name="tel3"
+                            size="4" maxlength="4"  />
+                    </div>
+</div>
 </div>
 
 
 
 
 
-<div  style=" text-align:right;">
-<button  class="loginBtn" style="color:white; background-color:yellow;">Back</button>
+
+<div class="mt-5" style="text-align:center;">
+<button class="loginNextbtn1" type="submit" >Next</button>
 </div>
 
-<div  style=" text-align:right;">
-<button  class="loginBtn" style="color:white; background-color:blue;">Next</button>
+<div class="mt-5" style="text-align:center;">
+<button class="loginNextbtn2" type="submit" >Back</button>
 </div>
 </form>
 
@@ -43,7 +82,9 @@ th:replace="index::layout(~{::section})">
 </div>
 
 </div>
-
+<br><br><br>
+<br><br><br>
+<br><br><br>
 
 
 <script>
