--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,7 @@
 
 .logo {
-	width:50px;
-	height:60px;
+    width:50px;
+    height:60px;
 }
 
 .footer {
@@ -10,22 +10,22 @@
   width: 100%;
 }
 .navbar li:hover{
-	background-color:red;
+    background-color:red;
 }
 
 .item{
-	background:yellow !important;
-	color:black !important;
+    background:yellow !important;
+    color:black !important;
 }
 .internet{
-	border:0px solid gray;
-	margin:15px;
-	background-color:#f2f2f2;
-	display:flex;
-	border-radius:10px;
+    border:0px solid gray;
+    margin:15px;
+    background-color:#f2f2f2;
+    display:flex;
+    border-radius:10px;
 }
 .internet .box{
-	border: 2px solid brown;
+    border: 2px solid brown;
     padding: 24px;
     margin: 2px 20px;
     border-radius: 28px;
@@ -35,7 +35,7 @@
     width:650px;
 }
 .customerservicesbtn1{
-	border:1px solid blue;
+    border:1px solid blue;
     color:white;
     border-radius:28px; 
     background-color:blue; 
@@ -45,11 +45,11 @@
      padding:8px;
 }
 .customerservicesbtn1:hover{
-	background-color:white;
-	color:blue;
+    background-color:white;
+    color:blue;
 }
 .customerservicesbtn2{
-	border:1px solid blue;
+    border:1px solid blue;
     color:white; border-radius:28px; 
     background-color:yellow; 
     height:50px;
@@ -58,11 +58,11 @@
     padding:8px;
 }
 .customerservicesbtn2:hover{
-	background-color:white;
-	color:yellow;
+    background-color:white;
+    color:yellow;
 }
 .customerservicesbtn3{
-	border:1px solid blue;
+    border:1px solid blue;
     color:blue; 
     border-radius:28px;  
     height:50px;
@@ -72,15 +72,15 @@
     margin-top:20px;
 }
 .customerservicesbtn3:hover{
-	background-color:blue;
-	color:yellow;
+    background-color:blue;
+    color:yellow;
 }
 .internet1{
-	margin:15px;
-	display:flex;
+    margin:15px;
+    display:flex;
 }
 .internet1 .box{
-	border: 2px solid yellow;
+    border: 2px solid yellow;
     margin: 2px 40px;
     border-radius: 8px;
     margin-bottom: 5px;
@@ -88,8 +88,8 @@
     width:650px;
 }
 .internet2{
-	margin:15px;
-	display:flex;
+    margin:15px;
+    display:flex;
 }
 .internet2 .box{
     margin: 2px 40px;
@@ -98,11 +98,11 @@
     width:650px;
 }
 .internet3{
-	border:1px solid gray;
-	margin:15px;
-	background-color:#f2f2f2;
-	display:flex;
-	border-radius:10px;
+    border:1px solid gray;
+    margin:15px;
+    background-color:#f2f2f2;
+    display:flex;
+    border-radius:10px;
 }
 .internet3 .box{
     padding: 24px;
@@ -115,14 +115,14 @@
     color:blue;
 }
 .my_profile_picture{
-	width:30px;
-	height:30px;
-	object-fit:cover;
-	border-radius:50%;
-	
+    width:30px;
+    height:30px;
+    object-fit:cover;
+    border-radius:50%;
+    
 }
 .chooseUser{
-	border:0px solid gray;
+    border:0px solid gray;
     margin:15px;
     background-color:#f2f2f2;
     display:flex;
@@ -152,9 +152,37 @@
     border: 2px solid brown;
     border-radius: 28px;
     background: red;
-  
-
-  
 }
+
+.loginNextbtn1{
+    border:1px solid blue;
+    color:white;
+    border-radius:28px; 
+    background-color:blue; 
+    width:300px;
+    font-size:28px;
+     padding:8px;
+     text-align:center;
+}
+.loginNextbtn1:hover{
+background-color:white;
+    color:blue;
+}
+
+.loginNextbtn2{
+    border:1px solid blue;
+    color:blue;
+    border-radius:28px; 
+    background-color:white; 
+    width:200px;
+    font-size:28px;
+     padding:8px;
+     text-align:center;
+}
+.loginNextbtn2:hover{
+background-color:blue;
+    color:white;
+}
+
 
 
