--- a/src/main/resources/templates/login/login_conform_page.html
+++ b/src/main/resources/templates/login/login_conform_page.html
@@ -12,25 +12,64 @@ th:replace="index::layout(~{::section})">
 <div class="col-md-6 offset-md-3">
 <div class="my-card mt-3">
 
-<h3 class="font-weight-bold">LOGIN FORM OF SSB CARD</h3>
-<h4>基本情報登録画面</h4><br>
+<h3 class="font-weight-bold" style="text-align:center">LOGIN CONFORM OF SSB CARD</h3>
+<h4 style="text-align:center">基本情報登録確認画面</h4><br>
 
-<form>
 
-<div class="mb-3">
-   <label for="name_field">Your Name:</label>
-   <input type="text" class="form-control" id="name_field" placeholder="Enter your name..." required>
 
+<form th:action="@{/bishnu/login_success_page}" method="post">
+
+<p th:text="'FirstName : ' "></p>
+
+<p th:text="'LastName : ' "></p>
+
+<p th:text="'Gender : ' "></p>
+
+<p th:text="'Date of birth : ' "></p>
+
+<p th:text="'Married Status : ' "></p>
+
+<p th:text="'Country Status : ' "></p>
+
+<p th:text="'Email : ' "></p>
+
+<p th:text="'Mobile Number : ' "></p>
+
+<p th:text="'Tel Number : ' "></p>
+
+<p th:text="'Zip Code : ' "></p>
+
+<p th:text="'Address : ' "></p>
+
+<p th:text="'City : ' "></p>
+
+<p th:text="'Building Name : ' "></p>
+
+<p th:text="'living Situationr : ' "></p>
+
+<p th:text="'Mortgage : ' "></p>
+
+<p th:text="'Driving License : ' "></p>
+
+<p th:text="'License Number : ' "></p>
+
+<p th:text="'UserId : ' "></p>
+
+<p th:text="'Password : ' "></p>
+
+<p th:text="'Re-Password : ' "></p>
+
+<p th:text="'Card Type : ' "></p>
+
+
+
+<div class="mt-5" style="text-align:center;">
+<button class="loginNextbtn1" type="submit" >Next</button>
 </div>
 
-
-
-
-
-
-<div  style=" text-align:right; margin-right:-50px">
-<button  class="loginBtn" style="color:white; background-color:yellow;">Back</button>
-</div>
+<div class="mt-5" style="text-align:center;">
+<button class="loginNextbtn2" type="submit" >Back</button>
+</div> 
 </form>
 
 
@@ -43,7 +82,9 @@ th:replace="index::layout(~{::section})">
 
 </div>
 
-
+<br><br><br>
+<br><br><br>
+<br><br><br>
 
 <script>
 $(document).ready(()=>{
