--- a/src/main/resources/templates/bishnu/login_page1.html
+++ b/src/main/resources/templates/bishnu/login_page1.html
@@ -21,76 +21,104 @@
 
 <div class="mb-3">
    <label for="firstName_field">First Name:</label>
-   <input type="text" class="form-control" name="firstName" id="firstName_field" placeholder="Enter your firstName..." required>
+   <div class="form-group" th:classappend="${#fields.hasErrors('firstName')} ? 'has-error'">
+   <input type="text" class="form-control" name="firstName" id="firstName_field" th:value="${firstName}" th:field="*{firstName}" placeholder="Enter your firstName..." >
+<span class="text-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>
+</div>
 </div>
 
 <div class="mb-3">
    <label for="lastName_field">Last Name:</label>
-   <input type="text" class="form-control" name="lastName" id="lastName_field" placeholder="Enter your lastName..." required>
+   <div class="form-group" th:classappend="${#fields.hasErrors('lastName')} ? 'has-error'">
+   <input type="text" class="form-control" name="lastName" id="lastName_field" th:value="${lastName}" th:field="*{lastName}"  placeholder="Enter your lastName..." >
+<span class="text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>
+</div>
 </div>
 
 <div class="mb-3">
 <label for="gender_field" >Gender :</label>
+<div class="form-group" th:classappend="${#fields.hasErrors('gender')} ? 'has-error'">
    <div th:each="item : ${gender}" class="form-check-inline">
    <input type="radio" class="form-check-input" name="gender" id="gender_field"
    th:text="${item.value}" th:value="${item.key}" th:field="*{gender}">
+   </div>
+   <br>
+   <span class="text-danger" th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}"></span>
    </div>
 </div>
 
 <div class="mb-3">
    <label for="year_field" >Date Of Birth:</label>
-       <div class="col-md-12" data-toggle="dropdown">
-       
-         <select name="dateofyear" class="dropdown　form-group">
+     <div class="form-group" th:classappend="${#fields.hasErrors('dateofyear')} ? 'has-error'">
+     <div class="form-group" th:classappend="${#fields.hasErrors('dateofmonth')} ? 'has-error'">
+     <div class="form-group" th:classappend="${#fields.hasErrors('dateofday')} ? 'has-error'">  
+     
+    <div class="col-md-12" data-toggle="dropdown">
+    <select name="dateofyear" class="dropdown　form-group">
             <option value="">Select  year</option>
             <option th:each="item : ${year}" th:value="${item.key}"
-            th:text="${item.value}"></option>
+            th:text="${item.value}" th:field="*{dateofyear}"></option>
          </select>Year
-                      
+          
+               
          <select name="dateofmonth" class="dropdown" >
             <option value="">Select  month</option>
             <option th:each="item : ${month}" th:value="${item.key}"
-            th:text="${item.value}"></option>
+            th:text="${item.value}" th:field="*{dateofmonth}"></option>
          </select>Month
-                 
+      
+         
          <select name="dateofday" class="dropdown">
            <option value="">Select  date</option>
            <option th:each="item : ${day}" th:value="${item.key}"
-            th:text="${item.value}" th:selected="${item.key} == *{dateofday}"></option>
+            th:text="${item.value}" th:field="*{dateofday}" ></option>
          </select>Date
-         
-    </div>
+         <br>
+         <p class="text-danger" th:if="${#fields.hasErrors('dateofyear')}" th:errors="*{dateofyear}"></p>
+         <p class="text-danger" th:if="${#fields.hasErrors('dateofmonth')}" th:errors="*{dateofmonth}"></p>
+         <p class="text-danger" th:if="${#fields.hasErrors('dateofday')}" th:errors="*{dateofday}"></p>
+      </div>
+     
+</div>
+ </div>
+ </div>
 </div>
 
 <div class="mb-3">
  <label for="marriedStatus_field">Married Status:</label>
+  <div class="form-group" th:classappend="${#fields.hasErrors('marriedStatus')} ? 'has-error'">
 <div class="form-check" >
-  <input class="form-check-input" type="radio" name="marriedStatus" value="Married" id="flexRadioDefault1">
+  <input class="form-check-input" type="radio" name="marriedStatus" value="Married" id="flexRadioDefault1" th:field="*{marriedStatus}">
   <label class="form-check-label" for="marriedStatus_field">
   Married
   </label>
 </div>
 <div class="form-check">
-  <input class="form-check-input" type="radio" name="marriedStatus" value="Unmarried" id="flexRadioDefault2" >
+  <input class="form-check-input" type="radio" name="marriedStatus" value="Unmarried" id="flexRadioDefault2" th:field="*{marriedStatus}">
   <label class="form-check-label" for="marriedStatus_field">
    Unmarried
   </label>
+</div>
+<span class="text-danger" th:if="${#fields.hasErrors('marriedStatus')}" th:errors="*{marriedStatus}"></span>
 </div>
 </div>
 
 <div class="mb-3">
  <label for="countryStatus_field">Country Status:</label>
+  <div class="form-group" th:classappend="${#fields.hasErrors('countryStatus')} ? 'has-error'">
 <div class="form-check" >
-  <input class="form-check-input" type="radio" name="countryStatus" id="flexRadioDefault1">
+  <input class="form-check-input" type="radio" name="countryStatus" value="Japan" id="flexRadioDefault1" th:field="*{countryStatus}">
   <label class="form-check-label" for="countryStatus_field">
   Japan
   </label>
 </div>
 <div class="form-check">
-  <input class="form-check-input" type="radio" name="countryStatus" id="flexRadioDefault2" >
+  <input class="form-check-input" type="radio" name="countryStatus" value="Foregin" id="flexRadioDefault2" th:field="*{countryStatus}" >
   <label class="form-check-label" for="countryStatus_field">
    Foregin
   </label>
+</div>
+ <span class="text-danger" th:if="${#fields.hasErrors('countryStatus')}" th:errors="*{countryStatus}"></span>
 </div>
 </div>
 
@@ -110,8 +138,8 @@
 </div>
 
 </div>
-
 </div>
+
 <br><br><br>
 <br><br><br>
 <br><br><br>
