--- a/src/main/resources/templates/bishnu/login_page4.html
+++ b/src/main/resources/templates/bishnu/login_page4.html
@@ -32,11 +32,11 @@ th:replace="index::layout(~{::section})">
 
 
 <div class="mt-5" style="text-align:center;">
-<button class="loginNextbtn1" type="submit" >Next</button>
+<button class="loginNextbtn1" type="submit" name="next" >Next</button>
 </div>
 
 <div class="mt-5" style="text-align:center;">
-<button class="loginNextbtn2" type="submit" >Back</button>
+<button class="loginNextbtn2" type="submit" name="back" >Back</button>
 </div> 
 </form>
 
