--- a/src/main/resources/templates/login/chooseCard.html
+++ b/src/main/resources/templates/login/chooseCard.html
@@ -15,21 +15,22 @@
 
 					<div class="chooseUserBox">
 						<img th:src="@{'/img/visa.jpg'}" alt="visa pic">
-						<button class="btn bg-primary btn-lg text-white mt-5 userlink">VISA
+						<button class="btn bg-primary btn-lg text-white mt-5 userlink" name="cardType" value="Visa">VISA
 							Card</button>
 					</div>
 
 					<div class="chooseUserBox">
 						<img th:src="@{'/img/master.jpg'}" alt="master pic">
-						<button class="btn bg-primary btn-lg text-white mt-5 userlink">Master
+						<button class="btn bg-primary btn-lg text-white mt-5 userlink" name="cardType" value="Master">Master
 							Card</button>
 					</div>
 
 					<div class="chooseUserBox">
 						<img th:src="@{'/img/etc.jpg'}" alt="etc pic">
-						<button class="btn bg-primary btn-lg text-white mt-5 userlink">ETC
+						<button class="btn bg-primary btn-lg text-white mt-5 userlink" name="cardType" value="ETC">ETC
 							Card</button>
 					</div>
+		
 				</div>
 			</form>
 		</div>
