--- a/src/main/resources/templates/bishnu/login_page3.html
+++ b/src/main/resources/templates/bishnu/login_page3.html
@@ -20,70 +20,98 @@ th:replace="index::layout(~{::section})">
 <div class="mb-3">
    <label for="zipCode_field">Zip Code :</label>
    <p><span>ex : 1010021</span></p>
-   <input type="number" class="form-control" name="zipCode" id="zipCode_field"   />
+   <div class="form-group" th:classappend="${#fields.hasErrors('zipCode')} ? 'has-error'">
+   <input type="text" class="form-control" name="zipCode" id="zipCode_field" th:value="${zipCode}" th:field="*{zipCode}" size="7" maxlength="7"  />
+   <span class="text-danger" th:if="${#fields.hasErrors('zipCode')}" th:errors="*{zipCode}"></span>
 </div>
+</div>
+
 <a th:href="@{https://www.post.japanpost.jp/zipcode/}" target="blank">Search Zip Code</a>
 <br><br>
 <div class="mb-3">
    <label for="address1_field">Address1 :</label>
-   <input type="text" class="form-control" name="address1" id="address1_field"   />
+    <div class="form-group" th:classappend="${#fields.hasErrors('address1')} ? 'has-error'">
+   <input type="text" class="form-control" name="address1" id="address1_field" th:value="${address1}" th:field="*{address1}"  />
+   <span class="text-danger" th:if="${#fields.hasErrors('address1')}" th:errors="*{address1}"></span>
+</div>
 </div>
 
 <div class="mb-3">
    <label for="address2_field">Address2 :</label>
-   <input type="text" class="form-control" name="address2" id="address2_field"   />
+    <div class="form-group" th:classappend="${#fields.hasErrors('address2')} ? 'has-error'">
+   <input type="text" class="form-control" name="address2" id="address2_field" th:value="${address2}" th:field="*{address2}"  />
+   <span class="text-danger" th:if="${#fields.hasErrors('address2')}" th:errors="*{address2}"></span>
+</div>
 </div>
 
 <div class="mb-3">
    <label for="address3_field">Address3 :</label>
-   <input type="text" class="form-control" name="address3" id="address3_field"   />
+    <div class="form-group" th:classappend="${#fields.hasErrors('address3')} ? 'has-error'">
+   <input type="text" class="form-control" name="address3" id="address3_field" th:value="${address3}" th:field="*{address3}"   />
+   <span class="text-danger" th:if="${#fields.hasErrors('address3')}" th:errors="*{address3}"></span>
+</div>
 </div>
 
 <div class="mb-3">
    <label for="livingSituation_field">living Situation :</label>
+    <div class="form-group" th:classappend="${#fields.hasErrors('livingSituation')} ? 'has-error'">
    <br>
    <select name="livingSituation" class="dropdown" >
             <option value="">Select  Living Situation</option>
             <option th:each="item : ${livingCondition}" th:value="${item.key}"
-            th:text="${item.value}"></option>
+            th:text="${item.value}" th:field="*{livingSituation}"></option>
          </select>
+         <p class="text-danger" th:if="${#fields.hasErrors('livingSituation')}" th:errors="*{livingSituation}"></p>
+</div>
 </div>
 
 <div class="mb-3">
  <label for="mortageLoan_field">Mortgage and rent payments (individual or spouse payment) :</label>
+
+ <div class="form-group" th:classappend="${#fields.hasErrors('mortageLoan')} ? 'has-error'">
 <div class="form-check col" >
-  <input class="form-check-input" type="radio" name="mortageLoan" value="Yes" id="flexRadioDefault1">
+  <input class="form-check-input" type="radio" name="mortageLoan" th:value="Yes" id="flexRadioDefault1"  th:field="*{mortageLoan}" >
   <label class="form-check-label" for="mortageLoan_field">
  Yes
   </label>
 </div>
+
 <div class="form-check col">
-  <input class="form-check-input" type="radio" name="mortageLoan" value="No" id="flexRadioDefault2" >
+  <input class="form-check-input" type="radio" name="mortageLoan" th:value="No" id="flexRadioDefault2"  th:field="*{mortageLoan}" >
   <label class="form-check-label" for="mortageLoan_field">
   No
   </label>
-</div>
+  <p class="text-danger" th:if="${#fields.hasErrors('mortageLoan')}" th:errors="*{mortageLoan}"></p>
+  </div>
+  </div>
 </div>
 
 <div class="mb-3">
  <label for="drivingLicense_field">Driving License :</label>
+  <div class="form-group" th:classappend="${#fields.hasErrors('drivingLicense')} ? 'has-error'">
 <div class="form-check col" >
-  <input class="form-check-input" type="radio" name="drivingLicense" value="Yes" id="flexRadioDefault1">
+  <input class="form-check-input" type="radio" name="drivingLicense" th:value="Yes" id="flexRadioDefault1"  th:field="*{drivingLicense}" >
   <label class="form-check-label" for="drivingLicense_field">
  Yes
   </label>
 </div>
 <div class="form-check col">
-  <input class="form-check-input" type="radio" name="drivingLicense" value="No" id="flexRadioDefault2" >
+  <input class="form-check-input" type="radio" name="drivingLicense" th:value="No" id="flexRadioDefault2" th:field="*{drivingLicense}" >
   <label class="form-check-label" for="drivingLicense_field">
   No
   </label>
+  <p class="text-danger" th:if="${#fields.hasErrors('drivingLicense')}" th:errors="*{drivingLicense}"></p>
+  </div>
+  </div>
 </div>
-</div>
+
 
 <div class="mb-3">
    <label for="licenseNumber_field">License Number :</label>
-   <input type="text" class="form-control" name="licenseNumber" id="licenseNumber_field"   />
+    <div class="form-group" th:classappend="${#fields.hasErrors('licenseNumber')} ? 'has-error'">
+   <input type="text" class="form-control" name="licenseNumber" id="licenseNumber_field" th:value="${licenseNumber}" th:field="*{licenseNumber}"  />
+   <p class="text-danger" th:if="${#fields.hasErrors('licenseNumber')}" th:errors="*{licenseNumber}"></p>
+</div>
 </div>
 
 <div class="mt-5" style="text-align:center;">
