--- a/src/main/resources/templates/bishnu/login_conform_page.html
+++ b/src/main/resources/templates/bishnu/login_conform_page.html
@@ -15,7 +15,9 @@ th:replace="index::layout(~{::section})">
 <h3 class="font-weight-bold" style="text-align:center">LOGIN CONFORM OF SSB CARD</h3>
 <h4 style="text-align:center">基本情報登録確認画面</h4><br>
 
-
+<div th:if="${message}">
+<p th:text="${message}" class="p-3 mb-2 bg-danger text-white"></p>
+</div>
 
 <form th:action="@{/bishnu/login_success_page}" method="post">
 
