--- a/src/main/resources/templates/bishnu/login_page1.html
+++ b/src/main/resources/templates/bishnu/login_page1.html
@@ -17,6 +17,10 @@
 <h3 class="font-weight-bold" style="text-align:center">LOGIN FORM OF SSB CARD</h3>
 <h4 style="text-align:center">基本情報登録画面 1</h4><br>
 
+<div th:if="${message}">
+<p th:text="${message}" class="p-3 mb-2 bg-danger text-white"></p>
+</div>
+
 <form th:action="@{/bishnu/login_page2}" th:object="${loginForm1}" method="post">
 
 <div class="mb-3">
