--- a/src/main/resources/templates/bishnu/login_page4.html
+++ b/src/main/resources/templates/bishnu/login_page4.html
@@ -14,7 +14,12 @@ th:replace="index::layout(~{::section})">
 
 <h3 class="font-weight-bold" style="text-align:center">LOGIN FORM OF SSB CARD</h3>
 <h4 style="text-align:center">基本情報登録画面 4</h4><br>
-
+<div th:if="${message}">
+<p th:text="${message}" class="p-3 mb-2 bg-danger text-white"></p>
+</div>
+<div th:if="${message1}">
+<p th:text="${message1}" class="p-3 mb-2 bg-danger text-white"></p>
+</div>
 <form th:action="@{/bishnu/login_conform_page}" th:object="${loginForm4}" method="post">
 
 
